--- a/static/styles.css
+++ b/static/styles.css
@@ -5,25 +5,26 @@
     color: #262d3a;
 
 }
-
 .logoBar, .footer{
     height: 4vw;
     background-color: whitesmoke;
 }
 .logos{
     height: 2vw;
+    margin-left: 1vw;
 }
 .navigation{
     position:absolute;
     top:0.4vw;
     right:0;
-    display:inline
+    
 }
 .navigationButton{
     position:relative;
     display: inline;
     float: right;
-    margin: 1vw;
+    margin: 4vw;
+    margin-top: 1vw;
 }
 .topSection{
     height: 34vw;
@@ -41,10 +42,19 @@
     position: absolute;
     top : 8vw;
     left: 8vw;
-    max-width: 30%;
+    max-width: 600px;
     opacity: 0.8;
-    padding: 1vw
+    padding: 1vw;
 }
+.testimonieText{
+    width: 400px;
+    
+}
+.testimonieBox{
+    margin: 1vw; 
+    display: inline-block; 
+}
+
 .linkPlain, .boxLink{
     text-decoration: none;
     color: #262d3a;
@@ -64,3 +74,17 @@
 .legalText{
     font-size: 0.5rem;
 }
+
+.rating{
+    width: 8vw;
+}
+
+.sticky{
+    position: fixed;
+    top: 0;
+    width: 100%
+  }
+  
+  .sticky + .content{
+    padding-top: 4vw;
+  }
