--- a/views/indexV0.2.html
+++ b/views/indexV0.2.html
@@ -9,7 +9,7 @@
 
 <body class = "body">
     
-    <header id = "myHeader"><!--header bar contains logos, navigation and login system-->
+    <header id = "myHeader" class = "header"><!--header bar contains logos, navigation and login system-->
 
         <div id = "logo bar" class = "logoBar" > <!--logos-->
             <div style = "position:relative; top: 25%; width: 19vw"> 
