--- a/views/indexV0.2.html
+++ b/views/indexV0.2.html
@@ -94,7 +94,7 @@
             </div>
         </section>
 
-        <div align = "center" style = "background-color: whitesmoke">
+        <div align = "center" class = "testimonieBlock">
             
             <div class = "testimonieBox">
                 
@@ -154,7 +154,7 @@
         
     </main>
 
-    <footer align="center" class = "footer">
+    <footer align="center" class = "footer" class = "footer">
 		
         <div>
             &copy;Bionetics 2005 | <a  href="bionetics/termsandconditions.htm">terms &amp; conditions</a> | <a  href="bionetics/privacy.htm">privacy</a> 
