--- a/views/indexV0.2.html
+++ b/views/indexV0.2.html
@@ -153,6 +153,7 @@
         </section>
 
         <div class = "pageBlock"><!--how it works-->
+            <p align = "center" class = "heading"> How to do out test</p>
             <div class = "howToImages">
                 <img src = "../static/images/basket.png" class = "howToImage">
                 <img src = "../static/images/tweezers.png" class = "howToImage">
@@ -170,7 +171,7 @@
                   </ol>
             </div>
             <div class = "howToVideo">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/sYbJb1ul0iQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="350" src="https://www.youtube.com/embed/sYbJb1ul0iQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </main>
