--- a/views/indexV0.2.html
+++ b/views/indexV0.2.html
@@ -4,77 +4,116 @@
 	<meta charset="UTF-8">
 	<meta name="description" content="Bionetics health test identifies underlying causes of illness. This health test is used for men&rsquo;s health, women&rsquo;s health, sickness, illness, head ache, stomach ache, pain, lethargy, bloated, bloating">
 	<meta name="keywords" content="Health test, hair analysis, hair test, health check, health screening, health testing, food intolerance test, pathogens test, toxins test, nutrition test, men&rsquo;s health, women&rsquo;s health, sickness, illness, head ache, stomach ache, pain, lethargy, bloated, bloating ">
-	<link rel="stylesheet" href="../static/styles.css">
+    <link rel="stylesheet" href="../static/styles.css">
+    
+
 </head>
 
-<body class = "body">
+<body class = "body" onload = "showDivs(slideIndex)">
     
     <header id = "myHeader" class = "header"><!--header bar contains logos, navigation and login system-->
 
-        <div id = "logo bar" class = "logoBar" > <!--logos-->
-            <div class = "logoLink"> 
+        <div class = "logoBar"><!--logos + login button-->
+            <div id = "logo Block" class = "logoBlock" > <!--logos-->
                 <a href="https://bionetics.co.uk/" class = "linkPlain">
                     <img src = "../static/images/Logo.jpg" alt = "Bionetics the key to natural wellbeing" class = "logos">
                     <img src = "../static/images/15years.jpg" alt = "15 years of Bionetics Ltd" class = "logos">
                 </a>
             </div>
+            <nav class = "logInButton"><!--Log in button-->
+                <div >
+                    <a class = "linkPlain" href="https://bionetics.co.uk/" > Log In</a>
+                </div>
+        
+            </nav>
+        </div>
 
-           
-            <nav align = "center" class = "navigation"> <!--Navigation-->
-                <nav class = "navigationButton">
-                    <div >
-                        <a class = "linkPlain" href="https://bionetics.co.uk/" > Log In</a>
-                    </div>
-    
-                </nav>
+        <nav align = "center" class = "navigation"><!--page navigation-->
+            <nav style = "display:inline-block">
+                
                 <nav class = "navigationButton" >
-                    <div  >
-                        <a class = "linkPlain"href="https://bionetics.co.uk/" > Shop</a>
+                    <div >
+                        <a class = "linkPlain"href="https://bionetics.co.uk/" > About</a>
                     </div>
-    
+        
                 </nav>
                 <nav class = "navigationButton" >
                     <div >
-                        <a class = "linkPlain"href="https://bionetics.co.uk/" > Contact us</a>
+                        <a class = "linkPlain"href="https://bionetics.co.uk/" > Hair Test</a>
                     </div>
-    
+        
+                </nav>
+                <nav class = "navigationButton" >
+                    <div >
+                        <a class = "linkPlain"href="https://bionetics.co.uk/" > medical conditions</a>
+                    </div>
+        
                 </nav>
                 <nav class = "navigationButton">
                     <div >
                         <a class = "linkPlain"href="https://bionetics.co.uk/" > Testimonies</a>
                     </div>
-    
+        
                 </nav>
                 <nav class = "navigationButton" >
                     <div >
-                        <a class = "linkPlain"href="https://bionetics.co.uk/" > About</a>
+                        <a class = "linkPlain"href="https://bionetics.co.uk/" > Contact us</a>
                     </div>
-    
+        
+                </nav>
+                <nav class = "navigationButton" >
+                    <div  >
+                        <a class = "linkPlain"href="https://bionetics.co.uk/" > Shop</a>
+                    </div>
+        
                 </nav>
             </nav>
-        </div>
+           
+        </nav>
     </header>
    
     <main class = "content">
-        <section id = "topSection" class = "topSection"><!--top image and text-->
-            <img src = "../static/images/flowers.jpg" id ="topPicture" class = "topPicture">
-            <body onload = "mainSize()"> </body>
-            <body onresize = "mainSize()"> </body>
+
+       <!--top image and text-->
+        <div class="scrollContent" style="max-width:80%;">
+            <img class="mySlides" src="../static/images/flowers.jpg" style="width:100%">
+            <img class="mySlides" src="../static/images/flowers2.jpg" style="width:100%">
+            <img class="mySlides" src="../static/images/flowers3.jpg" style="width:100%">
+            <div align = "center" style ="display:inline-block; width:100%">
+                <div class="leftButton hoverKhaki" onclick="plusDivs(-1)">&#10094;</div>
+                <div class="rightButton hoverKhaki" onclick="plusDivs(1)">&#10095;</div>
+                <span class="badge hoverWhite" onclick="selectDivs(1)">1</span>
+                <span class="badge hoverWhite" onclick="selectDivs(2)">2</span>
+                <span class="badge hoverWhite" onclick="selectDivs(3)">3</span>
+            </div>
+        </div>
             
-            <div class = "textBox">
-                <div align = "center">
-                    <p>
-                        <b>Bionetics is one of the <i>most complete</i> approaches to the healing process.</b>
-                     </p>
-                    <p>
-                        It recognises, and starts with the premise that the body is a wonderful natural machine, that when able to work as intended, will keep the body in good health and maintain a very effective defence system.
-                    </p>
-                   
+        <div class = "howToBar">
+            <img src = "../static/images/backgroundFade.png" style = "width: 100%">
+            <p align = "center" class = "heading"  style = "position:relative; bottom: 8vw "> How it works</p>
+            <div align = "center" class = "howToImages">
+                <div class = "howToBox">
+                    <img src = "../static/images/basket.png" class = "howToImage">
+                    <p >Select your test from the range below</p>
                 </div>
-                   
+                <div class = "howToBox">
+                    <img src = "../static/images/tweezers.png" class = "howToImage">
+                    <p>We need 4 strands of hair with the root attached</p>
+                </div>
+                <div class = "howToBox">
+                    <img src = "../static/images/envalope.png" class = "howToImage">
+                    <p>Send in the form with your sample</p>
+                </div>
+                <div class = "howToBox">
+                    <img src = "../static/images/phone.png" class = "howToImage">
+                    <p>arrange your 15 minute FREE consultation</p>
+                </div>
             </div>
             
-        </section>
+        </div>
+        <div class = "productBar">
+
+        </div>
 
         <section align = "center" ><!--image links-->
             <div class = "boxLink" >
@@ -152,28 +191,7 @@
             </div>
         </section>
 
-        <div class = "pageBlock"><!--how it works-->
-            <p align = "center" class = "heading"> How to do out test</p>
-            <div class = "howToImages">
-                <img src = "../static/images/basket.png" class = "howToImage">
-                <img src = "../static/images/tweezers.png" class = "howToImage">
-                <img src = "../static/images/envalope.png" class = "howToImage">
-            </div>
-            <div class = "howToList">
-                <ol >
-                    <li>Start by either buying a test online </li>
-                    <li>Pull the hair root sample preferably from your head. </li>
-                    <li>We need 4 strands of hair with the root attached because we are testing the root. </li>
-                    <li>Attach the sample to our application form. </li>
-                    <li>Send in the form and within 7 working days of us receiving your sample you will have your report to read through. You can collect it online or request a postal version. </li>
-                    <li>Then call us to arrange your 15 minute FREE consultation over the phone with one of our in house practitioners. </li>
-                    <li>Its as simple as that</li>
-                  </ol>
-            </div>
-            <div class = "howToVideo">
-                <iframe width="560" height="350" src="https://www.youtube.com/embed/sYbJb1ul0iQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </div>
+        
     </main>
 
     <footer align="center" class = "footer" class = "footer">
