--- a/views/indexV0.2.html
+++ b/views/indexV0.2.html
@@ -112,7 +112,18 @@
             
         </div>
         <div class = "productBar">
-
+            <div align = "center" class = "productBox">
+                <p>online results + 15 minute consultation</p>
+            </div>
+            <div align = "center" class = "productBox">
+                <p>online results + 15 minute consultation + printed report</p>
+            </div>
+            <div align = "center" class = "productBox">
+                <p>online results + 30 minute consultation</p>
+            </div>
+            <div align = "center" class = "productBox">
+                <p>online results + 30 minute consultation + printed report</p>
+            </div>
         </div>
 
         <section align = "center" ><!--image links-->
