added styling to product bar, removed image links

--- a/views/indexV0.2.html
+++ b/views/indexV0.2.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="Bionetics health test identifies underlying causes of illness. This health test is used for men&rsquo;s health, women&rsquo;s health, sickness, illness, head ache, stomach ache, pain, lethargy, bloated, bloating">
 	<meta name="keywords" content="Health test, hair analysis, hair test, health check, health screening, health testing, food intolerance test, pathogens test, toxins test, nutrition test, men&rsquo;s health, women&rsquo;s health, sickness, illness, head ache, stomach ache, pain, lethargy, bloated, bloating ">
     <link rel="stylesheet" href="../static/styles.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -108,43 +108,40 @@
                     <img src = "../static/images/phone.png" class = "howToImage">
                     <p>arrange your 15 minute FREE consultation</p>
                 </div>
+                
+            </div>
+            <div align = "center" style = "position: relative; bottom: 5vw">
+                <a class = "linkPlain"href="https://bionetics.co.uk/" > Learn more &#10095</a>
             </div>
             
         </div>
-        <div class = "productBar">
-            <div align = "center" class = "productBox">
-                <p>online results + 15 minute consultation</p>
+        <div align = "center" class = "productBar">
+            <p align = "center" class = "heading"  > Our tests</p>
+            <div>
+                <div class = "productBox">
+                    <p>online results + 15 minute consultation</p>
+                    <a class = "linkPlain"href="https://bionetics.co.uk/" > Learn more &#10095</a>
+                </div>
+                <div  class = "productBox">
+                    <p>online results + 15 minute consultation + printed report</p>
+                    <a class = "linkPlain"href="https://bionetics.co.uk/" > Learn more &#10095</a>
+                </div>
+                <div class = "productBox">
+                    <p>online results + 30 minute consultation</p>
+                    <a class = "linkPlain"href="https://bionetics.co.uk/" > Learn more &#10095</a>
+                </div>
+                <div  class = "productBox">
+                    <p>online results + 30 minute consultation + printed report</p>
+                    <a class = "linkPlain"href="https://bionetics.co.uk/" > Learn more &#10095</a>
+                </div>
+                <div>
+                    <a class = "linkPlain"href="https://bionetics.co.uk/" > Shop &#10095</a>
+                </div>
             </div>
-            <div align = "center" class = "productBox">
-                <p>online results + 15 minute consultation + printed report</p>
-            </div>
-            <div align = "center" class = "productBox">
-                <p>online results + 30 minute consultation</p>
-            </div>
-            <div align = "center" class = "productBox">
-                <p>online results + 30 minute consultation + printed report</p>
-            </div>
+            
+            <img src = "../static/images/backgroundFadeBlue.png" style = "width: 100%; position: relative; top: 15px">
         </div>
-
-        <section align = "center" ><!--image links-->
-            <div class = "boxLink" >
-                <a href="https://bionetics.co.uk/">
-                    <img src = "../static/images/pillPoppin.jpg" class = "boxImage">
-                </a>
-            </div>
-            <div class = "boxLink">
-                <a href="https://bionetics.co.uk/">
-                    <img src = "../static/images/pillPoppin.jpg" class = "boxImage">
-                </a>
-            </div>
-            <div class = "boxLink">
-                <a href="https://bionetics.co.uk/">
-                    <img src = "../static/images/pillPoppin.jpg" class = "boxImage">
-                </a>
-            </div>
-        </section>
-
-        <div align = "center" class = "pageBlock"><!--Testimonies-->
+        <div align = "center" class = "testimonieBlock"><!--Testimonies-->
             
             <div class = "testimonieBox">
                 
@@ -181,31 +178,19 @@
                 </p>
                 <img src = "../static/images/fiveStar.png" class = "rating">
             </div>
-           
+            <div  >
+                <a class = "linkPlain"href="https://bionetics.co.uk/" style = "position:relative; bottom: 2vw"> More testimonies &#10095</a>
+            </div>
         </div>
-
-        <section align = "center"> <!--image links-->
-            <div class = "boxLink">
-                <a href="https://bionetics.co.uk/">
-                    <img src = "../static/images/pillPoppin.jpg" class = "boxImage">
-                </a>
-            </div>
-            <div class = "boxLink">
-                <a href="https://bionetics.co.uk/">
-                    <img src = "../static/images/pillPoppin.jpg" class = "boxImage">
-                </a>
-            </div>
-            <div class = "boxLink">
-                <a href="https://bionetics.co.uk/">
-                    <img src = "../static/images/pillPoppin.jpg" class = "boxImage">
-                </a>
-            </div>
-        </section>
-
         
     </main>
 
     <footer align="center" class = "footer" class = "footer">
+        <div>
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-instagram"></a>
+        </div>
 		
         <div>
             &copy;Bionetics 2005 | <a  href="bionetics/termsandconditions.htm">terms &amp; conditions</a> | <a  href="bionetics/privacy.htm">privacy</a> 
