--- a/static/styles.css
+++ b/static/styles.css
@@ -97,8 +97,8 @@
 .rightButton{
     float:right;
 }
-.hoverKhaki:hover{
-    color:#b4aa50!important;
+.hoverYellow:hover{
+    color:#f9da03!important;
     cursor: pointer;
 }
 
@@ -120,8 +120,8 @@
     padding: 1vw;
     z-index: 100;
 }
-.pageBlock{
-    background-color:lightblue;
+.testimonieBlock{
+    background-color:white;
 }
 .testimonieText{
     width: 400px;
@@ -174,7 +174,7 @@
 
 .howToBar{
     background-color: #f9da03;
-    display: inline-block
+    
 }
 .howToBox{
     display:inline-block;
@@ -195,9 +195,8 @@
 }
 
 .productBar{
-    
-    background-color:lightblue;
-    padding: 3vw
+    background-color:#add8e6;
+    padding-top: 3vw
     
 }
 .productBox{
@@ -205,10 +204,38 @@
     background-color: rgb(182, 182, 212);
     display:inline-block;
     border-radius: 10px;
-    padding: 10px
+    padding: 10px;
+    margin: 3vw
 }
 
+.fa {
+    padding: 10px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+}
+  
+.fa:hover {
+    opacity: 0.7;
+}
+  
+ 
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+  
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+.fa-instagram {
+    background: #125688;
+    color: white;
+  }
+  
 .footer{
-    height: 75px;
+    
     background-color: whitesmoke;
 }
