--- a/views/indexV0.2.html
+++ b/views/indexV0.2.html
@@ -73,6 +73,15 @@
     </header>
    
     <main class = "content">
+        <div align = "center">
+            <img src = "../static/images/resultsIn5Days.PNG" class = "uspsImage">
+            <img src = "../static/images/thousandsHelped.PNG" class = "uspsImage">
+            <img src = "../static/images/4in1Test.PNG" class = "uspsImage">
+            <img src = "../static/images/1stCommercial.PNG" class = "uspsImage">
+            <img src = "../static/images/numberOneChoice.PNG" class = "uspsImage">
+            <img src = "../static/images/noHiddenCosts.PNG" class = "uspsImage">
+            <img src = "../static/images/talkToAnActualPerson.PNG" class = "uspsImage">
+        </div>
 
        <!--top image and text-->
         <div class="scrollContent" style="max-width:80%;">
@@ -186,7 +195,7 @@
     </main>
 
     <footer align="center" class = "footer" class = "footer">
-        <div>
+        <div style = "padding: 1vw">
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-twitter"></a>
             <a href="#" class="fa fa-instagram"></a>
