--- a/views/indexV0.2.html
+++ b/views/indexV0.2.html
@@ -85,15 +85,20 @@
 
        <!--top image and text-->
         <div class="scrollContent" style="max-width:80%;">
-            <img class="mySlides" src="../static/images/flowers.jpg" style="width:100%">
-            <img class="mySlides" src="../static/images/flowers2.jpg" style="width:100%">
-            <img class="mySlides" src="../static/images/flowers3.jpg" style="width:100%">
+            <img class="mySlides" src="../static/images/intolerance.png" style="width:100%">
+            <img class="mySlides" src="../static/images/nutritionalItems.jpg" style="width:100%">
+            <img class="mySlides" src="../static/images/bloating.jpg" style="width:100%">
+            <img class="mySlides" src="../static/images/dinner.jpg" style="width:100%">
+
             <div align = "center" style ="display:inline-block; width:100%">
-                <div class="leftButton hoverKhaki" onclick="plusDivs(-1)">&#10094;</div>
-                <div class="rightButton hoverKhaki" onclick="plusDivs(1)">&#10095;</div>
-                <span class="badge hoverWhite" onclick="selectDivs(1)">1</span>
-                <span class="badge hoverWhite" onclick="selectDivs(2)">2</span>
-                <span class="badge hoverWhite" onclick="selectDivs(3)">3</span>
+                <div class="leftButton hoverYellowButton" onclick="plusDivs(-1)">&#10094;</div>
+                <div class="rightButton hoverYellowButton" onclick="plusDivs(1)">&#10095;</div>
+
+                <span class="badge hoverYellow" onclick="selectDivs(1)">1</span>
+                <span class="badge hoverYellow" onclick="selectDivs(2)">2</span>
+                <span class="badge hoverYellow" onclick="selectDivs(3)">3</span>
+                <span class="badge hoverYellow" onclick="selectDivs(4)">4</span>
+
             </div>
         </div>
             
