added FAQs section, added two more product options

--- a/static/styles.css
+++ b/static/styles.css
@@ -136,6 +136,7 @@
 }
 .testimonieBlock{
     background-color:white;
+   
 }
 .testimonieText{
     width: 400px;
@@ -145,7 +146,10 @@
    
     margin: 4vw; 
     margin-top: 2.5vw;
+    padding: 1vw;
     display: inline-block; 
+    border-radius: 50px;
+    background-color:  #60931c;
 }
 
 .linkPlain, .boxLink{
@@ -200,6 +204,7 @@
     position:relative;
     margin: 3vw;
     bottom: 7vw
+    
 }
 
 .howToImage{
@@ -224,6 +229,27 @@
     margin: 3vw
 }
 
+.collapsibleButton {
+    background-color:#f9da03;
+    cursor: pointer;
+    padding: 18px;
+    border: none;
+    outline: none;
+    font-size: 1.5rem;
+    
+}
+.active, .collapsible:hover{
+    background-color: #f9da03;
+}
+.collapsableContent{
+    width: 50%;
+    padding: 0 18px;
+    font-size: 1rem;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    background-color:#f9da03;
+}
 .fa {
     padding: 10px;
     font-size: 30px;
