--- a/static/styles.css
+++ b/static/styles.css
@@ -281,3 +281,55 @@
     
     background-color: whitesmoke;
 }
+
+.sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidebar a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidebar a:hover {
+    color: #f1f1f1;
+  }
+  
+  .sidebar .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+    
+  }
+  
+  .openbtn {
+    font-size: 30px;
+    cursor: pointer;
+    background-color:#f9da03;
+    color:#262d3a;
+    padding-bottom: 8px;
+    border: none;
+    position:relative;
+    left: 45vw;
+
+  }
+  
+  .openbtn:hover {
+    background-color:#60931c;
+  }
+  
